force-app/main/default/objects/PorcelanosaSetting__c/PorcelanosaSetting__c.object-meta.xml
<CustomObject>
    <description>Object to store configuration values as KEY, SUBKEY and VALUE.

For example, GOOGLE_KEY, UK, 102-343</description>
    <label>Porcelanosa Setting</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Porcelanosa Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Porcelanosa Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>