force-app/main/default/objects/PorcelanosaSetting__c/fields/Subkey__c.field-meta.xml
<CustomField>
    <fullName>Subkey__c</fullName>
    <description>Secondary key of the record. Please use capitals.</description>
    <inlineHelpText>Secondary key of the record. Please use capitals.</inlineHelpText>
    <label>SUBKEY</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>