force-app/main/default/objects/PorcelanosaSetting__c/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <description>Setting value</description>
    <label>Value 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>