force-app/main/default/objects/PorcelanosaSetting__c/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <label>Value 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>