force-app/main/default/objects/PorcelanosaSetting__c/fields/Value3__c.field-meta.xml
<CustomField>
    <fullName>Value3__c</fullName>
    <label>Value 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>