force-app/main/default/objects/PorcelanosaSetting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Key__c</columns>
    <columns>Subkey__c</columns>
    <columns>Description__c</columns>
    <columns>Value1__c</columns>
    <columns>Value2__c</columns>
    <columns>Value3__c</columns>
    <columns>Value4__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>