force-app/main/default/objects/PorcelanosaSetting__c/listViews/Management_event_emails.listView-meta.xml
<ListView>
    <fullName>Management_event_emails</fullName>
    <columns>OBJECT_ID</columns>
    <columns>IsActive__c</columns>
    <columns>NAME</columns>
    <columns>Key__c</columns>
    <columns>Subkey__c</columns>
    <columns>Value1__c</columns>
    <columns>Value2__c</columns>
    <columns>Value3__c</columns>
    <columns>Value4__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Key__c</field>
        <operation>equals</operation>
        <value>EVENTMANAGEMENTEMAIL</value>
    </filters>
    <label>Management event emails</label>
</ListView>